# fab-minmax

./: AGENTS.md  BDD_TEST_PHILOSOPHY.md  IMPLEMENTATION_SUMMARY.md  MODEL_SELECTION.md  QUICK_START.md  RALPH_LOOP_GUIDE.md  README.md  SPEC.md  convert_to_md.py  en-fab-cr.txt  fab_search.py  fastest_to_40.py  main.py  optimal_deck.txt  pyproject.toml  ralph-auto.sh  ralph.sh
.opencode/commands/: create_plan.md  fab_search.md  implement_bdd_rule.md  ralph_loop.md
fab-rules/: en-fab-cr.md
fab_engine/: README.md  __init__.py
fab_engine/agents/: __init__.py  heuristic.py  policy.py  training.py
fab_engine/cards/: __init__.py  abilities.py  loader.py  model.py
fab_engine/engine/: __init__.py  actions.py  combat.py  effects.py  game.py  precedence.py
fab_engine/gym_env/: __init__.py  env.py
fab_engine/zones/: __init__.py  player_zones.py  zone.py
tests/: ARCHITECTURE_DIAGRAM.md  BDD_CHECKLIST.md  BDD_TESTS_README.md  REAL_VS_MOCK.md  bdd_helpers.py  test_abilities.py  test_cards.py  test_engine.py  test_env.py  test_heuristic.py  test_loader.py  test_zones.py
tests/bdd_helpers/: __init__.py  core.py  game_state.py  stubs.py
tests/features/: section_1_0_2_precedence.feature  section_1_0_general.feature  section_1_10_game_state.feature  section_1_11_priority.feature  section_1_12_numbers_and_symbols.feature  section_1_13_assets.feature  section_1_14_costs.feature  section_1_15_counters.feature  section_1_1_players.feature  section_1_2_objects.feature  section_1_3_1a_card_ownership.feature  section_1_3_cards.feature  section_1_4_attacks.feature  (+111 more)
(+126 files in other folders)
