[project]
name = "fab-minmax"
version = "0.1.0"
description = "RL-based optimizer for finding the fastest Flesh and Blood Kano deck"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "gymnasium>=0.29.1",
    "torch>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["fab_engine*"]
